--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.bukkit</groupId>
-			<artifactId>bukkit</artifactId>
+			<artifactId>craftbukkit</artifactId>
 			<version>${bukkitVersion}</version>
 			<type>jar</type>
 			<scope>compile</scope>
