--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: Forum-Bridge
 author:
     - Favorlock
-main: com.favorlock.ForumBridge.OKB
+main: com.favorlock.ForumBridge.ForumBridge
 version: 1.0.0
 database: false
 description: A forum bridge plugin for Bukkit.
@@ -52,7 +52,7 @@ commands:
     usage: |
            Usage: /<command>
   fusername:
-    description: Bulletin Board Bridge forum username lookup command.
+    description: Bulletin Board Bridge forum username loForumBridgeup command.
     usage: |
             Usage: /<command>
 permissions:
