--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.favorlock</groupId>
-	<version>1.0.3-SNAPSHOT</version>
+	<version>1.0.4</version>
 
 	<name>ForumBridge</name>
 	<url>https://github.com/Favorlock/ForumBridge</url>
