--- a/pom.xml
+++ b/pom.xml
@@ -2,15 +2,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>Forum-Bridge</artifactId>
-    <groupId>com.favorlock</groupId>
+    <groupId>com.com.favorlock</groupId>
     <packaging>pom</packaging>
     <version>1.0.4b</version>
     <modules>
         <module>listeners</module>
+        <module>Plugin</module>
     </modules>
 
-    <name>ForumBridge</name>
-    <url>https://github.com/Favorlock/ForumBridge</url>
+    <name>com.favorlock.ForumBridge</name>
+    <url>https://github.com/Favorlock/com.favorlock.ForumBridge</url>
     <description>Sync Your Forums Users To Their In-Game Account</description>
 
     <!-- Source code -->
@@ -19,67 +20,4 @@
         <connection>scm:git://github.com/Favorlock/Forum-Bridge.git</connection>
         <url>https://github.com/Favorlock/Forum-Bridge</url>
     </scm>
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <bukkitVersion>1.4.6-R0.3</bukkitVersion>
-    </properties>
-
-    <repositories>
-        <repository>
-            <id>bukkit-repo</id>
-            <url>http://repo.bukkit.org/content/groups/public/</url>
-        </repository>
-        <repository>
-            <id>vault-repo</id>
-            <url>http://ci.herocraftonline.com/plugin/repository/everything</url>
-        </repository>
-    </repositories>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.bukkit</groupId>
-            <artifactId>craftbukkit</artifactId>
-            <version>${bukkitVersion}</version>
-            <type>jar</type>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>net.milkbowl.vault</groupId>
-            <artifactId>Vault</artifactId>
-            <version>1.2.22-SNAPSHOT</version>
-        </dependency>
-    </dependencies>
-
-    <build>
-        <defaultGoal>clean install</defaultGoal>
-        <resources>
-            <resource>
-                <targetPath>.</targetPath>
-                <filtering>true</filtering>
-                <directory>${basedir}/src/main/resources</directory>
-                <includes>
-                    <include>*.yml</include>
-                </includes>
-            </resource>
-        </resources>
-        <plugins>
-            <!-- Compiler plugin -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.4</version>
-                <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                    <compilerArguments>
-                        <O>-Xlint:all</O>
-                        <O>-Xlint:-path</O>
-                    </compilerArguments>
-                    <showWarnings>true</showWarnings>
-                    <showDeprecation>true</showDeprecation>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 </project>
