--- a/Plugin/src/main/resources/plugin.yml
+++ b/Plugin/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: Forum-Bridge
 author:
     - Favorlock
-main: com.com.favorlock.com.favorlock.ForumBridge.com.favorlock.ForumBridge
+main: com.favorlock.ForumBridge.ForumBridge
 version: 1.0.4b
 database: false
 description: A forum bridge plugin for Bukkit.
