--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.favorlock</groupId>
+
+    <groupId>com.gmail.favorlock</groupId>
+    <artifactId>Forum-Bridge</artifactId>
     <version>1.0.4b</version>
 
-    <name>ForumBridge</name>
+    <name>Forum-Bridge</name>
     <url>https://github.com/Favorlock/ForumBridge</url>
     <description>Sync Your Forums Users To Their In-Game Account</description>
 
@@ -22,31 +24,32 @@
 
     <repositories>
         <repository>
-            <id>bukkit-repo</id>
-            <url>http://repo.bukkit.org/content/groups/public/</url>
+            <id>spigotmc-snapshots</id>
+            <url>http://repo.md-5.net/content/repositories/snapshots</url>
         </repository>
+
         <repository>
             <id>vault-repo</id>
-            <url>http://ci.herocraftonline.com/plugin/repository/everything</url>
+            <url>http://nexus.theyeticave.net/content/repositories/pub_releases</url>
         </repository>
     </repositories>
 
     <dependencies>
         <dependency>
-            <groupId>org.bukkit</groupId>
-            <artifactId>craftbukkit</artifactId>
-            <version>${bukkitVersion}</version>
-            <type>jar</type>
-            <scope>compile</scope>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot</artifactId>
+            <version>1.7.9-R0.1-SNAPSHOT</version>
         </dependency>
+
         <dependency>
             <groupId>net.milkbowl.vault</groupId>
             <artifactId>Vault</artifactId>
-            <version>1.2.22-SNAPSHOT</version>
+            <version>1.2.32</version>
         </dependency>
     </dependencies>
 
     <build>
+        <finalName>${artifactId}</finalName>
         <defaultGoal>clean install</defaultGoal>
         <resources>
             <resource>
@@ -77,5 +80,4 @@
             </plugin>
         </plugins>
     </build>
-    <artifactId>Forum-Bridge</artifactId>
 </project>
